<resources>
    <string name="app_name">MyTrip</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="haven_t_no_account_signup">Haven\'t No Account? SignUp</string>
    <string name="signup">Signup</string>
    <string name="already_have_an_account_login">Already Have An Account? Login</string>
    <string name="name">Name</string>
    <string name="logout">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="expense_entry">Expense Entry</string>
    <string name="expense_name">Expense Name</string>
    <string name="expense_amount">Expense Amount</string>
    <string name="empty_list">Empty List</string>
    <string name="destination">Destination</string>
    <string name="budget">Budget</string>
    <string name="set_date">Set Date</string>
    <string name="save_event">Save Event</string>
    <string name="write_something_about_your_image">Write something about your image</string>
    <string name="upload">Upload</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="wind_speed">Wind Speed</string>
</resources>
